--- a/_sass/modules/_page-header.sass
+++ b/_sass/modules/_page-header.sass
@@ -13,7 +13,7 @@ $h1-size: 48px
     display: block
     margin: 0 auto
     padding: em(32) 0 em(37)
-    width: $max-width
+    max-width: $max-width
     &, &:visited, &:active
       color: $dark-gray
       text-decoration: none
